# WallLight

./: .gitignore
Bootloader/: compile_uf2.txt  update-tinyuf2-adafruit_qtpy_esp32s3-0.18.1.uf2
Bootloader/BootIcon/: create_boot_icon.py
Documentation/Graph/: .$WallLight Graph Modules.drawio.bkp  .$WallLight Graph Modules.drawio.dtmp  WallLight Graph Modules.drawio
Firmware/Bootloader/: Adafruit ESPTool.url
Firmware/FileSystem/: system.json
Firmware/Memory/: system.json
Firmware/Memory/graphs/: Animation_Bounce.json  Demo_Techno.json  Demo_Techno_3.json
Firmware/Testprograms/ESP32_S3_Debug/: platformio.ini
Firmware/Testprograms/ESP_Now_Test/: WallLight.code-workspace  platformio.ini
Firmware/Testprograms/LED_Test/: CMakeLists.txt  demo.py  packet_installer.py  platformio.ini  serial_terminal.py  upload_script.py
Firmware/Testprograms/LVGL_Test/: WallLight.code-workspace  platformio.ini
Firmware/WallLight/: CMakeLists.txt  LICENSE  WallLight.code-workspace  platformio.ini  system.json
Firmware/WallLight/graphs/: Animation_Matrix.json  Demo_ModuleTest_Generator.json  generator_dirac_test.json  rainbow_rect.json  sine_analyzer.json  test_graph.json  test_graph_analyzer.json  test_graph_analyzer_dual.json
Firmware/WallLight/src/: console.cpp  console.h  console.hpp  demo.hpp  main.cpp  systemParser.cpp  systemParser.h  systemParser.hpp  utils.cpp  utils.hpp
Firmware/WallLight/tools/: upload_script.py
Firmware/WallLightRemote/: partitions_custom.csv  platformio.ini
Firmware/WallLightRemote/UI/: SquareLine_Project.sll  SquareLine_Project.spj
Firmware/WallLightRemote/graphs/: Demo_Audio.json
Firmware/WallLightRemote/include/: sdkconfig.h
Firmware/WallLightRemote/src/: ambientSensor.cpp  ambientSensor.hpp  console.cpp  console.hpp  guiDsa.cpp  guiDsa.hpp  guiDsm.cpp  guiDsm.hpp  guiLvgl.hpp  hmi.cpp  hmi.hpp  main.cpp  mic.cpp  mic.hpp  powerMgmt.cpp  powerMgmt.hpp  rotaryEncoder.cpp  rotaryEncoder.hpp  utils.cpp
Graphics/Logo/: WallLight Remote.psd
Hardware/WallLight/: WallLight.PrjPcb  WallLight.SCHLIB  WallLight_V1.0.PcbDoc  WallLight_V1.0.SchDoc
Hardware/WallLight/3D/: 7790.step
Hardware/WallLight/__Previews/: WallLight_V1.0.SchDocPreview
Hardware/WallLightRemote/: README.md  WallLightRemote.OutJob  WallLightRemote.PcbLib  WallLightRemote.PrjPcb  WallLightRemote.PrjPcbStructure  WallLightRemote.SCHLIB  WallLightRemote_V1.0.SchDoc  WallLightRemote_V1.0_Displays.SchDoc  WallLightRemote_V1.0_Drill.Cam  WallLightRemote_V1.0_HMI.SchDoc  WallLightRemote_V1.0_MCU.SchDoc  WallLightRemote_V1.0_Power.SchDoc
Hardware/WallLightRemote/3D/: 84593 VEML6040.SLDPRT  84593 VEML6040.x_t  Encoder.SLDASM  Encoder.x_t  SKRPAC.SLDPRT  SKRPAC.x_t  SS-12D10L4.SLDPRT  SS-12D10L4.x_t  Tactal Switch - SMD (12mmx12mmx7.5mm).SLDPRT  Tactal Switch - SMD (12mmx12mmx7.5mm).x_t  User Library-QFN56_0_4.x_t  User Library-WQFN-16.x_t  User Library-hclga_4l.SLDPRT  User Library-hclga_4l.x_t  evqq2-dhmsw2-02w_.SLDPRT  evqq2-dhmsw2-02w_.step  evqq2-dhmsw2-02w_.x_t
Hardware/WallLightRemote/Project Logs for WallLightRemote/: Design Rule Check - WallLightRemote_V1.drc  Design Rule Check - WallLightRemote_V1.html  Pick Place for WallLightRemote_V1.0.csv  Status Report.Txt  WallLightRemote_V1.0 BOM.xlsx  WallLightRemote_V1.0 CPL.xlsx  WallLightRemote_V1.0-RectHoles.TXT  WallLightRemote_V1.0-RoundHoles.TXT  WallLightRemote_V1.0-SlotHoles.TXT  WallLightRemote_V1.0-macro.APR_LIB  WallLightRemote_V1.0.DRR  WallLightRemote_V1.0.EXTREP  WallLightRemote_V1.0.G1  WallLightRemote_V1.0.G2  WallLightRemote_V1.0.GBL  WallLightRemote_V1.0.GBO  WallLightRemote_V1.0.GBP  WallLightRemote_V1.0.GBS  WallLightRemote_V1.0.GM1  WallLightRemote_V1.0.GTL  WallLightRemote_V1.0.GTO  WallLightRemote_V1.0.GTP  WallLightRemote_V1.0.GTS  WallLightRemote_V1.0.LDP  WallLightRemote_V1.0.REP  WallLightRemote_V1.0.RUL  WallLightRemote_V1.0.apr
Hardware/WallLightRemote/Project Outputs for NintendoSwitchBridge_Prototype/: Pick Place for WallLightRemote_V1.0.csv  Status Report.Txt
Software/Emulator/: SplineDemo.py  WallLight_Emulator.py  WallLight_Emulator_Kivy.py  WallLight_Emulator_Tkinker.py  plotterDemo.py
Software/TeensyGui/: index.html
Software/Testprograms/Qt-CMake-HelloWorld/: CMakeLists.txt
Software/WallLightTest/: Arduino.h  CMakeLists.txt  WallLightTest.code-workspace  WallLightTest.cpp  WallLightTest.h  WallLightTest.ui  main.cpp  mainwindow.ui
Software/WallLightTest/Arduino/: Arduino.h  Print.cpp  Print.h  Stream.cpp  Stream.h  console.cpp  console.hpp
Software/WallLightTest/Test/: TestEngine.cpp  TestEngine.hpp
Software/WallLightTest/Test/Example/: TestExample.hpp  TestExample_HeartBeat.hpp  TestExample_Techno2.hpp
Software/WallLightTest/Test/Function/: TestFunction.hpp  TestFunctionAdder.hpp  TestFunctionBlank.hpp  TestFunctionBrightness.hpp  TestFunctionColorBlend.hpp  TestFunctionColorGain.hpp  TestFunctionColorInsert.hpp  TestFunctionColorInterpolate.hpp  TestFunctionColorWheel.hpp  TestFunctionDirac.hpp  TestFunctionFire.hpp  TestFunctionMixer.hpp  TestFunctionMultiplier.hpp  TestFunctionPdf.hpp  TestFunctionProduct.hpp  TestFunctionPulse.hpp  TestFunctionRamp.hpp  TestFunctionRect.hpp  TestFunctionSubtractor.hpp  TestFunctionSum.hpp  TestFunctionSwitch.hpp  TestFunctionTriangle.hpp
Software/WallLightTest/Test/Generator/: TestGenerator.hpp  TestGeneratorDirac.hpp  TestGeneratorRamp.hpp  TestGeneratorRandom.hpp  TestGeneratorRect.hpp  TestGeneratorSine.hpp  TestGeneratorTriangle.hpp
Software/WallLightTest/Test/Modifier/: TestModifier.hpp  TestModifierAbs.hpp  TestModifierAdder.hpp  TestModifierConstrain.hpp  TestModifierDifferentiator.hpp  TestModifierEaseIn.hpp  TestModifierEaseInOut.hpp  TestModifierEaseOut.hpp  TestModifierExpSmoothing.hpp  TestModifierHsvToRgb.hpp  TestModifierIntegrator.hpp  TestModifierInvert.hpp  TestModifierMixer.hpp  TestModifierMonoflop.hpp  TestModifierMultiplier.hpp  TestModifierNegate.hpp  TestModifierProduct.hpp  TestModifierRgbToHsv.hpp  TestModifierSampler.hpp  TestModifierSubtractor.hpp  TestModifierSum.hpp  TestModifierSwitch.hpp
(+282 files in other folders)
